--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -36,7 +36,7 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark navbar-black">
         <div class="container">
-            <a class="navbar-brand" href="/">My App</a>
+            <a class="navbar-brand" href="/">Dawgg</a>
         </div>
     </nav>
 
